--- a/index.html
+++ b/index.html
@@ -113,6 +113,43 @@
             <button class="tablinks" onclick="openTab(event, 'UltrasonMuayene')">Ultrason ve Muayene Şeması</button>
         </div>
 
+        <div id="UltrasonMuayene" class="tabcontent">
+    <h2>Ultrason ve Muayene Şeması</h2>
+    <div class="letter-section">
+        <div class="letter">A</div>
+        <div class="drug">Abdominal Ultrasonografi:</div>
+        <div class="usage">
+            <ul>
+                <li>Organların boyut, şekil ve kapsül değerlendirmesi</li>
+                <li>Patolojik kitlelerin tespiti (tümör, kist vb.)</li>
+                <li>Periton boşluğu değerlendirmesi</li>
+            </ul>
+        </div>
+    </div>
+    <div class="letter-section">
+        <div class="letter">C</div>
+        <div class="drug">Cardiac Ultrasonografi:</div>
+        <div class="usage">
+            <ul>
+                <li>Kalp yapı ve fonksiyonlarının değerlendirilmesi</li>
+                <li>Valvüler ve miyokardiyal değerlendirme</li>
+                <li>Perikard boşluğu değerlendirilmesi</li>
+            </ul>
+        </div>
+    </div>
+    <div class="letter-section">
+        <div class="letter">D</div>
+        <div class="drug">Doppler Ultrasonografi:</div>
+        <div class="usage">
+            <ul>
+                <li>Kan akım hızı ölçümü</li>
+                <li>Vasküler ve kardiak incelemelerde kullanım</li>
+                <li>Renkli ve power Doppler yöntemleri</li>
+            </ul>
+        </div>
+    </div>
+</div>
+        
         <div id="Hesaplama" class="tabcontent">
             <h2>İlaç Hesaplama Formu</h2>
             <p style="font-style: italic; font-size: 12px;">DEA-LCA</p>
