--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veterinerlik İlaç Sözlüğü ve Dozaj Hesaplama</title>
+    <title>VET. HEK. D. ECEM AKMAZ</title>
     <div style="text-align: center; font-weight: bold;">DEA</div>
     <style>
         body {
