--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Veterinerlik İlaç Sözlüğü ve Hesaplama</h1>
+        <h1>VET. HEK. D. ECEM AKMAZ</h1>
 
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Hesaplama')">Dozaj Hesaplama</button>
