--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VET. HEK. D. ECEM AKMAZ</title>
+    <title>VET. HEK. DEA</title>
     <div style="text-align: center; font-weight: bold;">DEA</div>
     <style>
         body {
@@ -105,7 +105,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>VET. HEK. D. ECEM AKMAZ</h1>
+        <h1>VET. HEK. DEA</h1>
 
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Hesaplama')">Dozaj Hesaplama</button>
