removed sign 4ever

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         
         <div id="Hesaplama" class="tabcontent">
             <h2>İlaç Hesaplama Formu</h2>
-            <p style="font-style: italic; font-size: 12px;">DEA-LCA</p>
+            <p style="font-style: italic; font-size: 12px;">DEA</p>
             <form>
                 <label for="weight">Ağırlık:</label>
                 <input type="number" id="weight" name="weight" required>
