--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VET. HEK. DEA</title>
-    <div style="text-align: center; font-weight: bold;">DEA</div>
+    <title>VetHekler için Yardımcı Uygulama</title>
+    <div style="text-align: center; font-weight: bold;"></div>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -114,7 +114,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>VET. HEK. DEA</h1>
+        <h1></h1>
 
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Hesaplama')">Dozaj Hesaplama</button>
@@ -161,7 +161,7 @@
         
         <div id="Hesaplama" class="tabcontent">
             <h2>İlaç Hesaplama Formu</h2>
-            <p style="font-style: italic; font-size: 12px;">DEA</p>
+            <p style="font-style: italic; font-size: 12px;"></p>
             <form>
                 <label for="weight">Ağırlık:</label>
                 <input type="number" id="weight" name="weight" required>
