--- a/index.html
+++ b/index.html
@@ -91,15 +91,34 @@
             document.getElementById(tabName).style.display = "block";
             evt.currentTarget.className += " active";
         }
-        function calculateDoseAndVolume() {
+        function openTab(evt, tabName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(tabName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+
+function calculateDoseAndVolume() {
     var weight = parseFloat(document.getElementById('weight').value);
     var weightUnit = document.getElementById('weight_unit').value;
     var dosePerKg = parseFloat(document.getElementById('dose_per_kg').value);
+    var doseUnit = document.getElementById('dose_unit').value;
     var concentrationMg = parseFloat(document.getElementById('concentration_mg').value);
     var concentrationMl = parseFloat(document.getElementById('concentration_ml').value);
 
     if (weightUnit === 'gram') {
         weight /= 1000.0;
+    }
+
+    if (doseUnit === 'g') {
+        dosePerKg *= 1000.0;
     }
 
     var weightBasedDose = weight * dosePerKg;
@@ -109,6 +128,7 @@
     document.getElementById('result_dose').textContent = 'Hesaplanan Doz: ' + weightBasedDose.toFixed(2) + ' mg';
     document.getElementById('result_volume').textContent = 'Hesaplanan Hacim: ' + volume.toFixed(2) + ' ml';
 }
+
     </script>
 </head>
 <body>
